# communitynotes

./: .gitignore
.github/workflows/: community_note_writer.yaml
template-api-note-writer/: pyproject.toml
template-api-note-writer/src/: main.py
template-api-note-writer/src/MUSE/model/: main.py
template-api-note-writer/src/MUSE/model/data/: prompt_correction_condense.txt  prompt_correction_generation_with_retrieval.txt  prompt_tag_identification.txt
template-api-note-writer/src/note_writer/: write_note.py
