[project]
name = "template-api-note-writer"
version = "0.1.0"
description = "Template API Note Writer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "html5lib>=1.1",
    "news-please>=1.6.15",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "requests>=2.32.3",
    "ruff>=0.12.0",
    "scikit-learn>=1.7.1",
    "selenium>=4.35.0",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "tweet-preprocessor>=0.6.0",
]
